--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "trunkless-whiteboard",
-  "version": "",
-  "main": "",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "repository": "git@github.com:wgslr/trunkless-whiteboard.git",
-  "author": "",
-  "license": "",
-  "dependencies": {},
+  "scripts": {
+      "bootstrap": "lerna bootstrap"
+  },
   "devDependencies": {
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "lerna": "3.22.1",
     "prettier": "^2.2.1"
   }
 }
