--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,5 +10,13 @@
   "files": [],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "ws": "^7.4.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/ws": "^7.4.0"
   }
 }
