--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,8 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-native": "^0.63.49",
     "react": "^17.0.1",
+    "react-art": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
+    "react-native-web": "^0.15.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-native": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
