--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,13 +11,15 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
     "@types/ws": "^7.4.0",
     "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
