--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "removeComments": false,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "alwaysStrict": true,
     "noFallthroughCasesInSwitch": true,
     // "typeRoots": ["./src/types", "./node_modules/@types"],
