--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "lib": ["es6", "es2017", "es2020.promise", "dom", "esnext.asynciterable"],
+    "lib": ["es6", "es2017", "es2020.promise", "esnext.asynciterable"],
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
