--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,8 +25,10 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
     "tiny-typed-emitter": "^2.0.3",
+    "uuid": "^8.3.2",
     "ws": "^7.4.3"
   }
 }
