--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^14.14.28",
     "@types/ws": "^7.4.0",
     "nodemon": "^2.0.7",
+    "superwstest": "^1.3.0",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
