--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,8 +19,10 @@
     "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0",
     "react-scripts": "4.0.2",
+    "tiny-typed-emitter": "^2.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "ws": "^7.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/ws": "^7.4.0"
   }
 }
