--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
     "no-shadow": "error",
     "func-style": ["error", "expression"],
     "curly": "error",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/explicit-module-boundary": "off",
     "no-unused-vars": [
       "error",
       { "ignoreRestSiblings": true }
