--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,6 +24,7 @@
     "recoil": "^0.1.2",
     "tiny-typed-emitter": "^2.0.3",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "ws": "^7.4.3"
   },
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0"
   }
 }
