--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,10 @@
     "curly": "error",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/explicit-module-boundary": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "off",
     "no-unused-vars": [
       "error",
       { "ignoreRestSiblings": true }
