--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
   "root": true,
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "plugin:@typescript-eslint/recommended",
     "prettier",
@@ -20,16 +17,12 @@
     "@typescript-eslint/explicit-module-boundary": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
-    "no-shadow": "off",
     "@typescript-eslint/no-shadow": "off",
-    "no-unused-vars": [
-      "error",
-      { "ignoreRestSiblings": true }
-    ]
+    "no-unused-vars": ["error", { "ignoreRestSiblings": true }]
   },
   "parserOptions": {
-      "ecmaVersion": 2017,
-      "sourceType": "module"
+    "ecmaVersion": 2017,
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
