--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "tiny-typed-emitter": "^2.0.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
+    "valtio": "^0.8.2",
     "web-vitals": "^1.0.1",
     "ws": "^7.4.3"
   },
