--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-native": "^0.63.49",
     "@types/uuid": "^8.3.0",
+    "encoding": "^0.0.0",
     "react": "^17.0.1",
     "react-art": "^17.0.1",
     "react-dom": "^17.0.1",
