--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-native": "^0.63.49",
     "@types/uuid": "^8.3.0",
     "encoding": "^0.0.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-art": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/ramda": "^0.27.39",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0"
   }
