--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
+    "@types/ramda": "^0.27.39",
     "@types/ws": "^7.4.0",
     "nodemon": "^2.0.7",
     "superwstest": "^1.3.0",
@@ -29,6 +30,7 @@
     "@types/uuid": "^8.3.0",
     "encoding": "^0.0.0",
     "express": "^4.17.1",
+    "ramda": "^0.27.1",
     "tiny-typed-emitter": "^2.0.3",
     "uuid": "^8.3.2",
     "ws": "^7.4.3"
