--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.28",
     "@types/ramda": "^0.27.39",
     "@types/ws": "^7.4.0",
@@ -30,6 +31,7 @@
     "@types/uuid": "^8.3.0",
     "encoding": "^0.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "ramda": "^0.27.1",
     "tiny-typed-emitter": "^2.0.3",
     "uuid": "^8.3.2",
