--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "homepage": "https://github.com/wgslr/trunkless-whiteboard#readme",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "build:prod": "tsc --build tsconfig.json",
+    "build": "tsc --build tsconfig.json",
+    "clean": "rm --recursive --force ./dist",
+    "start": "yarn run build && node dist/index.js",
     "dev": "nodemon",
     "test": "NODE_ENV=test jest --verbose --runInBand",
     "test:watch": "NODE_ENV=test jest --verbose --runInBand --watch"
