--- a/packages/encoding/package.json
+++ b/packages/encoding/package.json
@@ -22,6 +22,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1",
     "clean": "rm --recursive --force dist",
     "build": "yarn run clean && tsc -p tsconfig.json",
+    "build:prod": "yarn run clean && tsc -p tsconfig.json",
     "watch": "nodemon"
   },
   "dependencies": {
