--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "protoc:client": "protoc --plugin=node_modules/ts-proto/protoc-gen-ts_proto ./protocol/protocol.proto --ts_proto_opt=esModuleInterop=true,unrecognizedEnum=false,oneof=unions --ts_proto_out=packages/client/src --experimental_allow_proto3_optional",
     "protoc:server": "protoc --plugin=node_modules/ts-proto/protoc-gen-ts_proto ./protocol/protocol.proto --ts_proto_opt=esModuleInterop=true,unrecognizedEnum=false,oneof=unions --ts_proto_out=packages/backend/src --experimental_allow_proto3_optional",
     "protoc": "concurrently \"yarn protoc:client\" \"yarn protoc:server\"",
+    "clean": "rm --recursive --force dist",
+    "build:prod": "yarn run clean && lerna run build:prod && cp --recursive packages/backend/dist ./ && cp --recursive packages/client/build ./dist/",
     "start:client": "cd packages/client && yarn start",
     "start:server": "cd packages/backend && yarn dev",
     "watch:encoding": "cd packages/encoding && yarn watch",
     "build:encoding": "cd packages/encoding && yarn build",
-    "start:dev": "yarn build:encoding && concurrently \"yarn start:client\" \"yarn start:server\" "
+    "start:dev": "yarn build:encoding && concurrently \"yarn start:client\" \"yarn start:server\"",
+    "exec:prod": "node ./dist/index.js"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
