--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,9 +10,11 @@ jobs:
   push_to_registry:
     name: Push Docker image GitHub Packages
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v1
         with:
@@ -22,3 +24,11 @@ jobs:
           registry: docker.pkg.github.com
           repository: wgslr/trunkless-whiteboard/app-image
           tag_with_ref: true
+
+      - name: Deploy to server
+        if: ${{ success() }}
+        run: |
+          curl https://${USER}:${PASSWORD}@trunkless-whiteboard.website/
+        env:
+          USER: ${{ secrets.DEPLOY_USER }}
+          PASSWORD: ${{ secrets.DEPLOY_USER_PASSWORD }}
