--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
-    "ts-proto": "^1.69.0"
+    "@types/uuid": "^8.3.0",
+    "ts-proto": "^1.69.0",
+    "uuid": "^8.3.2"
   }
 }
