--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -32,6 +32,7 @@
     "ramda": "^0.27.1",
     "tiny-typed-emitter": "^2.0.3",
     "uuid": "^8.3.2",
+    "winston": "^3.3.3",
     "ws": "^7.4.3"
   }
 }
