--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bootstrap": "lerna bootstrap",
     "protoc:client": "protoc --plugin=node_modules/ts-proto/protoc-gen-ts_proto ./protocol/protocol.proto --ts_proto_opt=esModuleInterop=true,unrecognizedEnum=false,oneof=unions --ts_proto_out=packages/client/src --experimental_allow_proto3_optional",
     "protoc:server": "protoc --plugin=node_modules/ts-proto/protoc-gen-ts_proto ./protocol/protocol.proto --ts_proto_opt=esModuleInterop=true,unrecognizedEnum=false,oneof=unions --ts_proto_out=packages/backend/src --experimental_allow_proto3_optional",
-    "protoc": "concurrently \"yarn protoc:client\" \"yarn protoc:server\"",
+    "protoc:benchmarks": "protoc --plugin=node_modules/ts-proto/protoc-gen-ts_proto ./protocol/protocol.proto --ts_proto_opt=esModuleInterop=true,unrecognizedEnum=false,oneof=unions --ts_proto_out=packages/benchmarks/src --experimental_allow_proto3_optional",
+    "protoc": "concurrently \"yarn protoc:client\" \"yarn protoc:server\" \"yarn protoc:benchmarks\"",
     "clean": "rm --recursive --force dist",
     "build:prod": "yarn run clean && lerna run build:prod && cp --recursive packages/backend/dist ./ && cp --recursive packages/client/build ./dist/",
     "start:client": "cd packages/client && yarn start",
