--- a/packages/benchmarks/tsconfig.json
+++ b/packages/benchmarks/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig-base.json",
   "compilerOptions": {
+    "target": "ES2020",
     "typeRoots": ["./src/types", "./node_modules/@types"],
     "baseUrl": "./src/types",
     "outDir": "dist"
