--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-native": "^0.63.49",
     "@types/uuid": "^8.3.0",
+    "downloadjs": "^1.4.7",
     "encoding": "^0.0.0",
+    "html-to-image": "^1.3.21",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-art": "^17.0.1",
@@ -59,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.2",
     "@types/ramda": "^0.27.39",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0"
