--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,6 +8,7 @@
     "clean": "rm --recursive --force ./dist",
     "start": "yarn run build && node dist/index.js",
     "dev": "nodemon",
+    "start:dev": "nodemon",
     "test": "NODE_ENV=test jest --verbose --runInBand",
     "test:watch": "NODE_ENV=test jest --verbose --runInBand --watch"
   },
