--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,6 +38,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "react-scripts start",
     "build:prod": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
