Allow proxying of any path in httpd

--- a/server_configuration/trunkless-whiteboard.website-le-ssl.conf
+++ b/server_configuration/trunkless-whiteboard.website-le-ssl.conf
@@ -7,11 +7,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:Upgrade} =websocket [NC]
-    RewriteRule /(.*) ws://127.0.0.1:12345/$1 [P,L]
+    RewriteRule /(.*)           ws://127.0.0.1:12345/$1 [P,L]
     ProxyPass /ws ws://127.0.0.1:12345/ws/
     ProxyPassReverse /ws ws://127.0.0.1:12345/ws/
-    ProxyPass / http://127.0.0.1:12345/
-    ProxyPassReverse / http://127.0.0.1:12345/
+    RewriteRule /(.*) http://127.0.0.1:12345/$1 [P]
 
     ScriptAlias /cgi-bin/ /path/to/cgi-bin/
     ScriptLog /path/to/cgi.log
